fix image spacing and size

--- a/css/whitepaper.css
+++ b/css/whitepaper.css
@@ -249,8 +249,8 @@ pre.highlight {
 
   main img,
   table {
-    margin: 0 -16px;
-    width: 96vw;
+    margin: 0 -14px;
+    width: 99vw;
   }
 
   th, td {
